generate unsafe benchmarks
REWRITE ME