@@ -10,8 +10,8 @@ distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-This is a build.xml which executes the main openjdk.build build.xml 
-to allow tools which invoke a root level build.xml file to 
+This is a build.xml which executes the main openjdk.build build.xml
+to allow tools which invoke a root level build.xml file to
 execute a build.
 -->
 
@@ -35,11 +35,118 @@ execute a build.
  	<property name="src-string" value="${basedir}/net/adoptopenjdk/bumblebench/string"/>
 	<property name="src-jni" value="${basedir}/net/adoptopenjdk/bumblebench/jni"/>
 	<property name="src-arraycopy" value="${basedir}/net/adoptopenjdk/bumblebench/arraycopy"/>
+    <property name="src-unsafe" value="${basedir}/net/adoptopenjdk/bumblebench/unsafe"/>
+    <property name="src-unsafe-generator" value="${src-unsafe}/generator"/>
 
-	<target name="compile-all" description="compile" >
+
+    <target name="unsafe-benchmark-generator" description="taskdef the unsafe benchmark generator">
+        <javac srcdir="${src-unsafe-generator}"
+            debug="on"
+            destdir=""
+            source="21"
+            target="21"
+            includeantruntime="true">
+        </javac>
+        <taskdef name="unsafegenerate" classname="BenchGenerator" classpath="${basedir}"/>
+    </target>
+
+    <target name="unsafe-benchmarks" depends="unsafe-benchmark-generator">
+        <unsafegenerate prefix="Put" template="${src-unsafe-generator}/Put.java.template" outputdir="${src-unsafe}">
+            <!-- plain puts -->
+            <blueprint type="Object" inlinetype="Reference" init="new Object()"/>
+            <blueprint type="int" inlinetype="Int" init="17"/>
+            <blueprint type="boolean" inlinetype="Boolean" init="true"/>
+            <blueprint type="byte" inlinetype="Byte" init="0x12"/>
+            <blueprint type="short" inlinetype="Short" init="17"/>
+            <blueprint type="char" inlinetype="Char" init="'a'"/>
+            <blueprint type="long" inlinetype="Long" init="17l"/>
+            <blueprint type="float" inlinetype="Float" init="1.0f"/>
+            <blueprint type="double" inlinetype="Double" init="1.0d"/>
+
+            <!-- volatile puts -->
+            <blueprint type="Object" inlinetype="Reference" mode="Volatile" init="new Object()"/>
+            <blueprint type="int" inlinetype="Int" mode="Volatile" init="17"/>
+            <blueprint type="boolean" inlinetype="Boolean" mode="Volatile" init="true"/>
+            <blueprint type="byte" inlinetype="Byte" mode="Volatile" init="0x12"/>
+            <blueprint type="short" inlinetype="Short" mode="Volatile" init="17"/>
+            <blueprint type="char" inlinetype="Char" mode="Volatile" init="'a'"/>
+            <blueprint type="long" inlinetype="Long" mode="Volatile" init="17l"/>
+            <blueprint type="float" inlinetype="Float" mode="Volatile" init="1.0f"/>
+            <blueprint type="double" inlinetype="Double" mode="Volatile" init="1.0d"/>
+
+            <!-- release puts -->
+            <blueprint type="Object" inlinetype="Reference" mode="Release" init="new Object()"/>
+            <blueprint type="int" inlinetype="Int" mode="Release" init="17"/>
+            <blueprint type="boolean" inlinetype="Boolean" mode="Release" init="true"/>
+            <blueprint type="byte" inlinetype="Byte" mode="Release" init="0x12"/>
+            <blueprint type="short" inlinetype="Short" mode="Release" init="17"/>
+            <blueprint type="char" inlinetype="Char" mode="Release" init="'a'"/>
+            <blueprint type="long" inlinetype="Long" mode="Release" init="17l"/>
+            <blueprint type="float" inlinetype="Float" mode="Release" init="1.0f"/>
+            <blueprint type="double" inlinetype="Double" mode="Release" init="1.0d"/>
+
+            <!-- opaque puts -->
+            <blueprint type="Object" inlinetype="Reference" mode="Opaque" init="new Object()"/>
+            <blueprint type="int" inlinetype="Int" mode="Opaque" init="17"/>
+            <blueprint type="boolean" inlinetype="Boolean" mode="Opaque" init="true"/>
+            <blueprint type="byte" inlinetype="Byte" mode="Opaque" init="0x12"/>
+            <blueprint type="short" inlinetype="Short" mode="Opaque" init="17"/>
+            <blueprint type="char" inlinetype="Char" mode="Opaque" init="'a'"/>
+            <blueprint type="long" inlinetype="Long" mode="Opaque" init="17l"/>
+            <blueprint type="float" inlinetype="Float" mode="Opaque" init="1.0f"/>
+            <blueprint type="double" inlinetype="Double" mode="Opaque" init="1.0d"/>
+        </unsafegenerate>
+        <unsafegenerate prefix="Get" template="${src-unsafe-generator}/Get.java.template" outputdir="${src-unsafe}">
+            <!-- plain gets -->
+            <blueprint type="Object" inlinetype="Reference"/>
+            <blueprint type="int" inlinetype="Int"/>
+            <blueprint type="boolean" inlinetype="Boolean"/>
+            <blueprint type="byte" inlinetype="Byte"/>
+            <blueprint type="short" inlinetype="Short"/>
+            <blueprint type="char" inlinetype="Char"/>
+            <blueprint type="long" inlinetype="Long"/>
+            <blueprint type="float" inlinetype="Float"/>
+            <blueprint type="double" inlinetype="Double"/>
+
+            <!-- volatile gets -->
+            <blueprint type="Object" inlinetype="Reference" mode="Volatile"/>
+            <blueprint type="int" inlinetype="Int" mode="Volatile"/>
+            <blueprint type="boolean" inlinetype="Boolean" mode="Volatile"/>
+            <blueprint type="byte" inlinetype="Byte" mode="Volatile"/>
+            <blueprint type="short" inlinetype="Short" mode="Volatile"/>
+            <blueprint type="char" inlinetype="Char" mode="Volatile"/>
+            <blueprint type="long" inlinetype="Long" mode="Volatile"/>
+            <blueprint type="float" inlinetype="Float" mode="Volatile"/>
+            <blueprint type="double" inlinetype="Double" mode="Volatile"/>
+
+            <!-- acquire gets -->
+            <blueprint type="Object" inlinetype="Reference" mode="Acquire"/>
+            <blueprint type="int" inlinetype="Int" mode="Acquire"/>
+            <blueprint type="boolean" inlinetype="Boolean" mode="Acquire"/>
+            <blueprint type="byte" inlinetype="Byte" mode="Acquire"/>
+            <blueprint type="short" inlinetype="Short" mode="Acquire"/>
+            <blueprint type="char" inlinetype="Char" mode="Acquire"/>
+            <blueprint type="long" inlinetype="Long" mode="Acquire"/>
+            <blueprint type="float" inlinetype="Float" mode="Acquire"/>
+            <blueprint type="double" inlinetype="Double" mode="Acquire"/>
+
+            <!-- opaque gets -->
+            <blueprint type="Object" inlinetype="Reference" mode="Opaque"/>
+            <blueprint type="int" inlinetype="Int" mode="Opaque"/>
+            <blueprint type="boolean" inlinetype="Boolean" mode="Opaque"/>
+            <blueprint type="byte" inlinetype="Byte" mode="Opaque"/>
+            <blueprint type="short" inlinetype="Short" mode="Opaque"/>
+            <blueprint type="char" inlinetype="Char" mode="Opaque"/>
+            <blueprint type="long" inlinetype="Long" mode="Opaque"/>
+            <blueprint type="float" inlinetype="Float" mode="Opaque"/>
+            <blueprint type="double" inlinetype="Double" mode="Opaque"/>
+        </unsafegenerate>
+    </target>
+
+	<target name="compile-all" description="compile" depends="unsafe-benchmarks">
 
 		<!-- core -->
-		<javac srcdir="${src-core}" 
+		<javac srcdir="${src-core}"
              destdir=""
              debug="on"
              source="1.8"
@@ -47,7 +154,7 @@ execute a build.
              includeantruntime="false"
              excludes="">
 		</javac>
-		<javac srcdir="${src-core}" 
+		<javac srcdir="${src-core}"
              destdir=""
              debug="on"
              source="1.8"
@@ -57,100 +164,100 @@ execute a build.
 		</javac>
 
 		<!-- collections -->
-		<javac srcdir="${src-collections}" 
-            debug="on" 
+		<javac srcdir="${src-collections}"
+            debug="on"
             destdir=""
             source="1.8"
-            target="1.8" 
+            target="1.8"
             includeantruntime="false"
             classpath="${src-core}"
         	excludes="**/*ambda*.java">
 		</javac>
 
-		<javac srcdir="${src-collections}" 
-            debug="on" 
+		<javac srcdir="${src-collections}"
+            debug="on"
             destdir=""
             source="1.8"
-            target="1.8" 
+            target="1.8"
             includeantruntime="false"
             classpath="${src-core}"
             includes="**/*ambda*.java">
 		</javac>
 
 		<!-- crypto -->
-		<javac srcdir="${src-crypto}" 
-            debug="on" 
+		<javac srcdir="${src-crypto}"
+            debug="on"
             destdir=""
             source="1.8"
-            target="1.8" 
+            target="1.8"
             includeantruntime="false"
             classpath="${src-core}">
 		</javac>
 
 		<!-- examples -->
-		<javac srcdir="${src-examples}" 
-            debug="on" 
+		<javac srcdir="${src-examples}"
+            debug="on"
             destdir=""
             source="1.8"
-            target="1.8" 
+            target="1.8"
             includeantruntime="false"
             classpath="${src-examples}"
             includes="**/SocketEchoBench.java">
 		</javac>
-		<javac srcdir="${src-examples}" 
-             debug="on" 
+		<javac srcdir="${src-examples}"
+             debug="on"
              destdir=""
              source="1.8"
-             target="1.8" 
+             target="1.8"
              includeantruntime="false"
              classpath="${src-examples}"
              includes="**/*ambda*.java">
 		</javac>
-		<javac srcdir="${src-examples}" 
-            debug="on" 
+		<javac srcdir="${src-examples}"
+            debug="on"
             destdir=""
             source="1.8"
-            target="1.8" 
+            target="1.8"
             includeantruntime="false"
             classpath="${src-examples}"
         	excludes="**/*ambda*.java, **/SocketEchoBench.java">
 		</javac>
 
 		<!-- string -->
-        <javac srcdir="${src-string}" 
-            debug="on" 
+        <javac srcdir="${src-string}"
+            debug="on"
             destdir=""
             encoding="UTF-8"
             source="1.8"
-            target="1.8" 
+            target="1.8"
             includeantruntime="false"
             classpath="${src-string}">
         </javac>
-		
+
 		<!-- gpu -->
-		<javac srcdir="${src-gpu}" 
-            debug="on" 
+		<javac srcdir="${src-gpu}"
+            debug="on"
             destdir=""
             source="1.8"
-            target="1.8" 
+            target="1.8"
             includeantruntime="false"
             classpath="${src-gpu}">
 		</javac>
 
 		<!-- indy -->
 		<!--
-        <javac srcdir="${src-indy}" 
-             debug="on" 
+        <javac srcdir="${src-indy}"
+             debug="on"
              destdir=""
              source="1.8"
-             target="1.8" 
+             target="1.8"
              classpath="${src-indy},${basedir}/asm-all-4.0.jar">
          </javac>
     	-->
 
 		<!-- lambda -->
-		<javac srcdir="${src-lambda}" 
-             debug="on" 
+		<javac srcdir="${src-lambda}"
+             debug="on"
              destdir=""
              source="1.8"
              target="1.8"
@@ -158,8 +265,8 @@ execute a build.
 		</javac>
 
 		<!-- JNI -->
-		<javac srcdir="${src-jni}" 
-             debug="on" 
+		<javac srcdir="${src-jni}"
+             debug="on"
              destdir=""
              source="1.8"
              target="1.8"
@@ -167,32 +274,43 @@ execute a build.
 		</javac>
 
 		<!-- math -->
-		<javac srcdir="${src-math}" 
-             debug="on" 
+		<javac srcdir="${src-math}"
+             debug="on"
              destdir=""
              source="1.8"
-             target="1.8" 
+             target="1.8"
 			 includeantruntime="false"
              classpath="${src-math}">
 		</javac>
 
 		<!-- humble -->
-		<javac srcdir="${src-humble}" 
+		<javac srcdir="${src-humble}"
         debug="on"
         destdir=""
         source="1.8"
-        target="1.8" 
+        target="1.8"
         includeantruntime="false">
 		</javac>
 
 		<!-- arraycopy -->
-		<javac srcdir="${src-arraycopy}" 
+		<javac srcdir="${src-arraycopy}"
         debug="on"
         destdir=""
         source="1.8"
-        target="1.8" 
+        target="1.8"
         includeantruntime="false">
 		</javac>
+
+        <!-- unsafe -->
+        <javac srcdir="${src-unsafe}"
+        debug="on"
+        destdir=""
+        source="21"
+        target="21"
+        includeantruntime="false"
+        excludes="generator/**">
+            <compilerarg line="--add-exports java.base/jdk.internal.misc=ALL-UNNAMED"/>
+        </javac>
 	</target>
 
 	<!-- Create BumbleBench.jar and clean up -->
@@ -201,7 +319,7 @@ execute a build.
 			<arg value="-c" />
 			<arg value="rm -f BumbleBench.jar" />
 		</exec>
-		
+
 		<jar jarfile="${dist}/BumbleBench.jar" filesonly="true">
 			<fileset dir="${basedir}"
              	excludes="**/asm-all-4.0.jar,**/Makefile,**/*.mk, **/build.xml. **/.project">
@@ -214,5 +332,9 @@ execute a build.
 		<delete>
 			<fileset dir="." includes="**/*.class"/>
 		</delete>
+
+        <delete>
+            <fileset dir="${src-unsafe}" includes="*Bench.java"/>
+        </delete>
 	</target>
 </project>
